refacted: backend will now work with sessions